# lora-attack-simulator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_COMPLETE.md  ARCHITECTURE_REFACTOR_PLAN.md  Attack_Scenario_Format_Specification.md  README.md  REFACTORING.md  REFACTORING_COMPLETE.md  REFACTORING_FEEDBACK.md  REFACTORING_SUMMARY.md  attack_cli.py  pyproject.toml  requirements.txt  test_phase4.py
.github/workflows/: ci.yml
docs/: VALIDATION_GUIDE.md
examples/: custom_attack_example.py  debug-join-uplink.json
examples/attacks/: README.md  chirpstack-replay-test.json  join-devnonce-v1.json  join-flood-small.json  join-memory-depth-v1.json  join-replay-v1.json  join-replay-v1.json.backup  join-replay.results.json  join-rollback-v1.json  mac-link-adr-v1.json  mac-malformed-truncated.json  replay-burst.json  replay-immediate.json  uplink-forgery-v1.json  uplink-replay-v1.json
examples/attacks/v0.9-deprecated/: chirpstack-join-replay.json  join-flood-large.json  join-replay.json  mac-link-adr.json  mac-malformed-invalid.json  mac-rx-param-setup.json  replay-delayed.json
examples/attacks/v1/: README.md  mac-link-adr-v1.json  uplink-replay-v1.json
src/attacks/: __init__.py  base.py  join_abuse.py  mac_abuse.py  packet_capture.py  replay.py  runner.py
src/cli/: shell.py
src/lora_attack_toolkit/: __init__.py  cli.py  config.py  main.py  provenance.py  runner.py
src/lorawan_sim/: __init__.py  main.py
src/lorawan_sim.egg-info/: PKG-INFO
src/sim_logging/: json_logger.py
src/simulator/: scenario_runner.py  session.py
src/transport/: in_memory.py  udp.py
tests/: test_channel_plan.py  test_config_validation.py  test_device_crypto_flow.py  test_scenario_loader.py  test_scenario_runner.py  test_version.py
tests/app/: test_results_header.py  test_set_conversion.py
tests/attacks/: test_attack_result.py  test_downlink_fcnt32.py  test_downlink_validation.py  test_join_abuse.py  test_join_devnonce.py  test_join_replay_generators.py  test_join_replay_verifiers.py  test_lifecycle.py  test_mac_abuse.py  test_replay.py  test_uplink_forgery.py
tests/experimental/: test_mac_abuse.py
tests/protocol/: test_class_a.py  test_mac_commands.py  test_otaa_radio.py  test_time_utils.py
tests/radio/: test_airtime_and_rotation.py  test_radio.py  test_radio_mac.py  test_subband_duty_cycle.py
tests/transport/: test_errors.py  test_resilient.py  test_udp.py
tools/: chirpstack_monitor.py
(+156 files in other folders)
