[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorawan-sim"
version = "0.1.0"
description = "LoRaWAN Offensive Security Testing Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography==3.3.2",
]

[project.optional-dependencies]
dev = []

[project.scripts]
lorawan-sim = "lorawan_sim.app.cli:main"

[tool.setuptools]
packages = ["lorawan_sim"]
package-dir = {"" = "src"}
