[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorat"
version = "0.2.0"
description = "LoRAT (LoRa Attack Toolkit) - A modular offensive-security testing framework for LoRaWAN Network Servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography==3.3.2",
  "typer==0.9.0",
  "rich==13.7.0",
  "cmd2==2.4.3"
]

[project.optional-dependencies]
dev = []

[project.scripts]
lorat = "lora_attack_toolkit.app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
