[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorat"
version = "0.2.0"
description = "LoRAT (LoRa Attack Toolkit) - A modular offensive-security testing framework for LoRaWAN Network Servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=42.0.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "cmd2>=2.4.3,<3.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.18",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
lorat = "lora_attack_toolkit.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "A", "BLE", "G", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast, deterministic unit tests — no network, no real clock",
  "integration: tests that require a live Network Server or real transport",
  "slow: tests with real-time sleeps > 1 s",
  "experimental: tests for unregistered experimental prototypes (e.g. MAC-command abuse); excluded from diploma experiments",
]
addopts = "-m 'not integration and not slow'"
